# Network-Analyser

./: README.md  pyproject.toml
sniffer/: capture.py  dashboard.py  main.py
sniffer/utils/: local_network.py  packet_summary.py  process_lookup.py  traffic_stats.py
