[tool.poetry]
name = "network-analyser"
version = "0.1.0"
description = ""
authors = ["gurpreet <gurp3773@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scapy = "^2.7.0"
rich = "^15.0.0"
netifaces = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
